hamburger menu and dark mode positins fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -33,8 +33,8 @@ a {
 /* dark mode setting */
 #mode {
     position: absolute;
-    top: 0.2rem;
-    right: 1rem;
+    bottom: 0px;
+    right: 10px;
     font-size: 3rem;
     cursor: pointer;
 }
@@ -46,9 +46,10 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
     width: 100%;
     box-sizing: border-box;
+    position: relative;
+    padding-bottom: 50px;
 }
 
 #headerContainer img {
@@ -81,6 +82,10 @@ a {
     display: flex;
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    overflow: hidden;
+    max-height: 0;
+    transition: all 0.3s ease;
 }
 
 .navigation li a {
@@ -89,6 +94,10 @@ a {
     margin: 0;
     color:var(--color-dark-blue);
     text-decoration: none;
+}
+
+.navigation.open {
+    max-height: 200px;
 }
 
 .navigation li a:link {
@@ -106,8 +115,8 @@ a {
 
 #menu {
     position: absolute;
-    top: 3rem;
-    right: 1rem;
+    bottom: 5px;
+    left: 50%;
     font-size: 2rem;
     border: 1px solid var(--color-navy-blue);
     padding: 0 0.5rem;
@@ -327,6 +336,7 @@ a {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
+    padding: 5px;
 }
 
 #current-weather-container h3 {
@@ -337,6 +347,7 @@ a {
 #container #weather-forcast {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding: 5px;
 }
 
 /* --------------------------------------------------------------- */
